# diagnostico-financiero-v6

./: .gitignore  Procfile  app_standalone.py  build.sh  data-schema-500.json  diagnostic_engine.py  diagnostic_report_generator.py  git-sync.bat  index.html  pyproject.toml  render.yaml  requirements.txt
