[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diagnostico-financiero"
version = "6.0.0"
description = "Sistema adaptativo de diagnóstico financiero"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
        "uvicorn==0.24.0",
            "pydantic==2.5.0",
                "reportlab==4.0.7",
                    "matplotlib==3.8.2",
                        "numpy==1.26.2",
                            "python-multipart==0.0.6",
                            ]
